--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="main-login">
         <div class="left-login">
             <H1>Portifólio Crlos D Abreu</H1>
-            <img src="Captura de tela 2022-03-23 084649.png" class="img-login" alt="img">
+            <img src="img/tt.png" class="img-login" alt="img">
+            <img src="img/icons8-instagram-30.png" alt=""><a href="https://www.instagram.com/carlos_trenk/" class="lin"><h2 class="ins">@carlos_trenk</h2></a>
         </div>
         <div class="right-login">
             <div class="card-login">
