--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-login">
         <div class="left-login">
-            <H1>Portifólio Crlos D Abreu</H1>
+            <H1>Portifólio Carlos D Abreu</H1>
             <img src="img/tt.png" class="img-login" alt="img">
             <img src="img/icons8-instagram-30.png" alt=""><a href="https://www.instagram.com/carlos_trenk/" class="lin"><h2 class="ins">@carlos_trenk</h2></a>
         </div>
