--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
         <div class="left-login">
             <H1>Portifólio Carlos D Abreu</H1>
             <img src="img/tt.png" class="img-login" alt="img">
-            <img src="img/icons8-instagram-30.png" alt=""><a href="https://www.instagram.com/carlos_trenk/" class="lin"><h2 class="ins">@carlos_trenk</h2></a>
+            <div class="container">
+                <div class="child"><img src="img/instagram.png" alt=""></div>
+            <div class="child"><a href="https://www.instagram.com/carlos_trenk/" class="lin"><h2 class="ins">@carlos_trenk</h2></a></div>
+            <div class="child"><img src="img/github.png" alt=""></div>
+            <div class="child"><a href="https://github.com/TrenksSS"><h2>Github</h2></a></div>
+        </div>
         </div>
         <div class="right-login">
             <div class="card-login">
