--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="child"><img src="img/instagram.png" alt=""></div>
             <div class="child"><a href="https://www.instagram.com/carlos_trenk/" class="lin"><h2 class="ins">@carlos_trenk</h2></a></div>
             <div class="child"><img src="img/github.png" alt=""></div>
-            <div class="child"><a href="https://github.com/TrenksSS"><h2>Github</h2></a></div>
+            <div class="child1"><a href="https://github.com/TrenksSS"><h2>Github</h2></a></div>
         </div>
         </div>
         <div class="right-login">
