--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 Documentos HTML podem ser interpretados por navegadores. A tecnologia é fruto da junção entre os padrões
                 HyTime e SGML.</h2>
                 <img src="img/2iFb.gif">
+                <div class="hr"></div>
         </div>
     </div>
 
