--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <H1>Portifólio Carlos D Abreu</H1>
             <img src="img/tt.png" class="img-login" alt="img">
             <div class="container">
-                <div class="child"><img src="img/instagram.png" alt=""></div>
+                <div class="child"><img src="img/instagram.png" alt="insta"></div>
                 <div class="child"><a href="https://www.instagram.com/carlos_trenk/" class="lin">
                         <h2 class="ins">@carlos_trenk</h2>
                     </a></div>
