--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="cont">
             <h1>Desenvolvimento de aplicativos de impacto</h1>
             <h2>Tem como objetivo principal descobrir como a tecnologia pode ser usada para a transformação social, para
-                alicar comceitos de gestão de projetos para identificar problemas sociais também usar a técnica do
+                alicar conceitos de gestão de projetos para identificar problemas sociais também usar a técnica do
                 Desing Thinking para desenvolver um protótipo de aplicativo voltado para impacto social positivo na
                 sociedade e utilizar o pensamento computacional (decomposição, abstração, padrões e algoritmos) para
                 analisar situações e cenários reais.</h2>
@@ -50,6 +50,10 @@
                 <img src="img/2iFb.gif">
                 <div class="hr"></div>
         </div>
+                <div class="infos">
+                    <div><img src="img/gmail.png"</div>
+                    <div><p>carlostrenk2018@gmail.com</p></div>
+                </div>
     </div>
 
     </div>
