--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="cont">
             <h1>Desenvolvimento de aplicativos de impacto</h1>
             <h2>Tem como objetivo principal descobrir como a tecnologia pode ser usada para a transformação social, para
-                alicar conceitos de gestão de projetos para identificar problemas sociais também usar a técnica do
+                aplicar conceitos de gestão de projetos para identificar problemas sociais também usar a técnica do
                 Desing Thinking para desenvolver um protótipo de aplicativo voltado para impacto social positivo na
                 sociedade e utilizar o pensamento computacional (decomposição, abstração, padrões e algoritmos) para
                 analisar situações e cenários reais.</h2>
