--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 Marcação de Hipertexto" é uma linguagem de marcação utilizada na construção de páginas na Web.
                 Documentos HTML podem ser interpretados por navegadores. A tecnologia é fruto da junção entre os padrões
                 HyTime e SGML.</h2>
-                <img src="img/2iFb.gif">
+                <img src="img/nRq.gif">
                 <div class="hr"></div>
         </div>
                 <div class="infos">
