--- a/index.html
+++ b/index.html
@@ -8,31 +8,61 @@
     <link rel="stylesheet" href="css/loginstyle.css">
     <link rel="shortcut icon" href="img/icon pg.png" type="image/x-icon">
     <title>Portifolio Carlos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="cab">
-        <div class="left-login">
-            <H1>Portifólio Carlos D Abreu</H1>
-            <img src="img/tt.png" class="img-login" alt="img">
-            <div class="container">
-                <div class="child"><img src="img/instagram.png" alt="insta"></div>
-                <div class="child"><a href="https://www.instagram.com/carlos_trenk/" class="lin">
-                        <h2 class="ins">@carlos_trenk</h2>
-                    </a></div>
-                <div class="child" id=""><img src="img/github.png" alt=""></div>
-                <div class="child1" id="git"><a href="https://github.com/TrenksSS">
-                        <h2 class="ins">Github</h2>
-                    </a></div>
-            </div>
+
+    <div id="cabecalho">
+        <H1 id="titulo_1">Portifólio Carlos D Abreu</H1>
+        <img src="img/tt.png" id="img_cabecalho" alt="img">
+    </div>
+
+    <div id="redes_sociais">
+
+        <div id="instagram">
+            <img src="img/instagram.png" alt="insta" width="40px">
+            <a class="ancoras" href="https://www.instagram.com/carlos_trenk/" class="lin">
+                <h2 class="ins">@carlos_trenk</h2>
+            </a>
         </div>
-        <div class="cont">
+
+        <div id="github">
+            <img src="img/github.png" alt="" width="40px">
+            <a class="ancoras" href="https://github.com/TrenksSS">
+                <h2 class="ins">Github</h2>
+            </a>
+        </div>
+
+        <div id="linkedin">
+            <img src="img/linkedin.png" alt="" width="40px">
+            <a class="ancoras" href="https://www.linkedin.com/in/carlos-daniel-08ba23223/">
+                <h2 class="ins">Linkedin</h2>
+            </a>
+        </div>
+
+        <div id="discord">
+            <img src="img/discordia.png" alt="" width="40px">
+            <a class="ancoras" href="https://discord.gg/UZEhvjp269">
+                <h2 class="ins">Discord</h2>
+            </a>
+        </div>
+    </div>
+
+    <div id="textos">
+
+        <div id="tx_1">
             <h1>Desenvolvimento de aplicativos de impacto</h1>
             <h2>Tem como objetivo principal descobrir como a tecnologia pode ser usada para a transformação social, para
                 aplicar conceitos de gestão de projetos para identificar problemas sociais também usar a técnica do
                 Desing Thinking para desenvolver um protótipo de aplicativo voltado para impacto social positivo na
                 sociedade e utilizar o pensamento computacional (decomposição, abstração, padrões e algoritmos) para
                 analisar situações e cenários reais.</h2>
+        </div>
+
+        <div id="tx_2">
             <h1>Atualmente Cursando</h1>
             <h2>Desenvolvimento de Software no SENAI</h2>
             <h2>Tendo como aprendizado:</h2>
@@ -47,13 +77,16 @@
                 Marcação de Hipertexto" é uma linguagem de marcação utilizada na construção de páginas na Web.
                 Documentos HTML podem ser interpretados por navegadores. A tecnologia é fruto da junção entre os padrões
                 HyTime e SGML.</h2>
-                <img src="img/nRq.gif">
-                <div class="hr"></div>
+            <img src="img/nRq.gif">
+        </div> 
+    </div>
+
+    <div class="infos">
+        <div><img src="img/gmail.png" width="40px"> </div>
+        <div>
+            <p>carlostrenk2018@gmail.com</p>
         </div>
-                <div class="infos">
-                    <div><img src="img/gmail.png"</div>
-                    <div><p>carlostrenk2018@gmail.com</p></div>
-                </div>
+    </div>
     </div>
 
     </div>
