atualização do portifolio

--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
 
     <div id="cabecalho">
         <H1 id="titulo_1">Portifólio Carlos D Abreu</H1>
-        <img src="img/tt.png" id="img_cabecalho" alt="img">
+        <img src="img/tt.png" id="img_cabecalho" alt="ilustração do Carlos">
     </div>
 
     <div id="redes_sociais">
 
         <div id="instagram">
-            <img src="img/instagram.png" alt="insta" width="40px">
             <a class="ancoras" href="https://www.instagram.com/carlos_trenk/" class="lin">
+                <img src="img/instagram.png" alt="icone do instagram" width="40px">
                 <h2 class="ins">@carlos_trenk</h2>
             </a>
         </div>
 
         <div id="github">
-            <img src="img/github.png" alt="" width="40px">
             <a class="ancoras" href="https://github.com/TrenksSS">
+                <img src="img/github.png" alt="icone do github" width="40px">
                 <h2 class="ins">Github</h2>
             </a>
         </div>
 
         <div id="linkedin">
-            <img src="img/linkedin.png" alt="" width="40px">
             <a class="ancoras" href="https://www.linkedin.com/in/carlos-daniel-08ba23223/">
+                <img src="img/linkedin.png" alt="icone do linkedin" width="40px">
                 <h2 class="ins">Linkedin</h2>
             </a>
         </div>
 
         <div id="discord">
-            <img src="img/discordia.png" alt="" width="40px">
             <a class="ancoras" href="https://discord.gg/UZEhvjp269">
+                <img src="img/discordia.png" alt="icone do discord" width="40px">
                 <h2 class="ins">Discord</h2>
             </a>
         </div>
@@ -54,7 +54,7 @@
     <div id="textos">
 
         <div id="tx_1">
-            <h1>Desenvolvimento de aplicativos de impacto</h1>
+            <h1 class="titulos_tx">Desenvolvimento de aplicativos de impacto</h1>
             <h2>Tem como objetivo principal descobrir como a tecnologia pode ser usada para a transformação social, para
                 aplicar conceitos de gestão de projetos para identificar problemas sociais também usar a técnica do
                 Desing Thinking para desenvolver um protótipo de aplicativo voltado para impacto social positivo na
@@ -63,28 +63,60 @@
         </div>
 
         <div id="tx_2">
-            <h1>Atualmente Cursando</h1>
+            <h1 class="titulos_tx">Atualmente Cursando</h1>
             <h2>Desenvolvimento de Software no SENAI</h2>
             <h2>Tendo como aprendizado:</h2>
+
+            <img src="img/java.png" alt="icone do java" width="30px">
             <h2>Java:</h2>
             <h2>Java é uma linguagem de programação e plataforma computacional lançada pela primeira vez pela Sun
                 Microsystems em 1995. Existem muitas aplicações e sites que não funcionarão, a menos que você tenha o
                 Java instalado, e mais desses são criados todos os dias. O Java é rápido, seguro e confiável. De laptops
                 a datacenters, consoles de games a supercomputadores científicos, telefones celulares à Internet, o Java
                 está em todos os lugares!</h2>
+
+            <img src="img/html-5.png" alt="icone do html 5" width="30px">
             <h2>HTML:</h2>
             <h2>HTML abreviação para a expressão inglesa HyperText Markup Language, que significa: "Linguagem de
                 Marcação de Hipertexto" é uma linguagem de marcação utilizada na construção de páginas na Web.
                 Documentos HTML podem ser interpretados por navegadores. A tecnologia é fruto da junção entre os padrões
                 HyTime e SGML.</h2>
-            <img src="img/nRq.gif">
-        </div> 
+
+            <img src="img/css-3.png" alt="icone do css" width="30px">
+            <h2>CSS:</h2>
+            <h2>CSS é chamado de linguagem Cascading Style Sheet e é usado para estilizar elementos escritos em uma
+                linguagem de marcação como HTML.
+                O CSS separa o conteúdo da representação visual do site</h2>
+
+            <img src="img/js.png" alt="icone do javascript" width="30px">
+            <h2>Javascript:</h2>
+            <h2>JavaScript é uma linguagem de programação front-end, isto é, uma linguagem que interpretada diretamente
+                no cliente (navegador). Nos últimos anos, JavaScript vem se destacando como a linguagem preferida entre
+                todos os programadores web</h2>
+
+            <img src="img/servidor-sql.png" alt="icone do sql" width="30px">
+            <h2>SQL:</h2>
+            <h2>JavaScript é uma linguagem de programação front-end, isto é, uma linguagem que interpretada diretamente
+                no cliente (navegador). Nos últimos anos, JavaScript vem se destacando como a linguagem preferida entre
+                todos os programadores web</h2>
+            <img id="gif" src="img/nRq.gif" alt="gif de uma gatinho sonolento">
+        </div>
     </div>
 
-    <div class="infos">
-        <div><img src="img/gmail.png" width="40px"> </div>
+    <div id="linha">
+        <div id="linha_1"></div>
+    </div>
+
+    <div id="infos">
+
+        <div id="info_1"><img src="img/gmail.png" width="40px" alt="icone do gmail"> </div>
         <div>
             <p>carlostrenk2018@gmail.com</p>
+        </div>
+
+        <div id="info_2"><img src="img/whatsapp.png" width="40px" alt="icone do whatsapp"> </div>
+        <div>
+            <p>(43) 9 8488-8002</p>
         </div>
     </div>
     </div>
