--- a/index.html
+++ b/index.html
@@ -19,36 +19,38 @@
         <H1 id="titulo_1">Portifólio Carlos D Abreu</H1>
         <img src="img/tt.png" id="img_cabecalho" alt="ilustração do Carlos">
     </div>
-
     <div id="redes_sociais">
 
-        <div id="instagram">
-            <a class="ancoras" href="https://www.instagram.com/carlos_trenk/" class="lin">
-                <img src="img/instagram.png" alt="icone do instagram" width="40px">
-                <h2 class="ins">@carlos_trenk</h2>
-            </a>
-        </div>
+        <button id="btn-mobile">Redes Sociais</button>
+        <ul id="menu">
+            <div id="instagram">
+                <a class="ancoras" href="https://www.instagram.com/carlos_trenk/" class="lin">
+                    <img src="img/instagram.png" alt="icone do instagram" width="40px">
+                    <h2 class="ins">@carlos_trenk</h2>
+                </a>
+            </div>
 
-        <div id="github">
-            <a class="ancoras" href="https://github.com/TrenksSS">
-                <img src="img/github.png" alt="icone do github" width="40px">
-                <h2 class="ins">Github</h2>
-            </a>
-        </div>
+            <div id="github">
+                <a class="ancoras" href="https://github.com/TrenksSS">
+                    <img src="img/github.png" alt="icone do github" width="40px">
+                    <h2 class="ins">Github</h2>
+                </a>
+            </div>
 
-        <div id="linkedin">
-            <a class="ancoras" href="https://www.linkedin.com/in/carlos-daniel-08ba23223/">
-                <img src="img/linkedin.png" alt="icone do linkedin" width="40px">
-                <h2 class="ins">Linkedin</h2>
-            </a>
-        </div>
+            <div id="linkedin">
+                <a class="ancoras" href="https://www.linkedin.com/in/carlos-daniel-08ba23223/">
+                    <img src="img/linkedin.png" alt="icone do linkedin" width="40px">
+                    <h2 class="ins">Linkedin</h2>
+                </a>
+            </div>
 
-        <div id="discord">
-            <a class="ancoras" href="https://discord.gg/UZEhvjp269">
-                <img src="img/discordia.png" alt="icone do discord" width="40px">
-                <h2 class="ins">Discord</h2>
-            </a>
-        </div>
+            <div id="discord">
+                <a class="ancoras" href="https://discord.gg/UZEhvjp269">
+                    <img src="img/discordia.png" alt="icone do discord" width="40px">
+                    <h2 class="ins">Discord</h2>
+                </a>
+            </div>
+        </ul>
     </div>
 
     <div id="textos">
@@ -124,5 +126,6 @@
     </div>
 
 </body>
+<script src="script.js"></script>
 
 </html>
