--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="redes_sociais">
 
         <button id="btn-mobile">Redes Sociais</button>
-        <ul id="menu">
+        <div id="menu">
             <div id="instagram">
                 <a class="ancoras" href="https://www.instagram.com/carlos_trenk/" class="lin">
                     <img src="img/instagram.png" alt="icone do instagram" width="40px">
@@ -50,7 +50,7 @@
                     <h2 class="ins">Discord</h2>
                 </a>
             </div>
-        </ul>
+        </div>
     </div>
 
     <div id="textos">
