--- a/index.html
+++ b/index.html
@@ -65,24 +65,21 @@
         </div>
 
         <div id="tx_2">
-            <h1 class="titulos_tx">Atualmente Cursando</h1>
+            <h1 class="titulos_tx">Formado</h1>
             <h2>Desenvolvimento de Software no SENAI</h2>
             <h2>Tendo como aprendizado:</h2>
 
             <img src="img/java.png" alt="icone do java" width="30px">
             <h2>Java:</h2>
-            <h2>Java é uma linguagem de programação e plataforma computacional lançada pela primeira vez pela Sun
-                Microsystems em 1995. Existem muitas aplicações e sites que não funcionarão, a menos que você tenha o
-                Java instalado, e mais desses são criados todos os dias. O Java é rápido, seguro e confiável. De laptops
-                a datacenters, consoles de games a supercomputadores científicos, telefones celulares à Internet, o Java
-                está em todos os lugares!</h2>
+            <h2>Java é uma linguagem de programação versátil, conhecida por sua portabilidade e orientação a objetos. Criada pela Sun Microsystems, Java é executada em várias plataformas por meio da JVM, sendo ideal para desenvolvimento de aplicativos de desktop, web e móveis. Sua biblioteca padrão oferece recursos abrangentes. Além disso, Java é essencial para o desenvolvimento de aplicativos Android, alcançando um amplo público. Em resumo, Java é uma linguagem escalável e confiável que desempenha um papel central na computação moderna, tornando-se uma habilidade valiosa para programadores.</h2>
 
             <img src="img/html-5.png" alt="icone do html 5" width="30px">
             <h2>HTML:</h2>
-            <h2>HTML abreviação para a expressão inglesa HyperText Markup Language, que significa: "Linguagem de
-                Marcação de Hipertexto" é uma linguagem de marcação utilizada na construção de páginas na Web.
-                Documentos HTML podem ser interpretados por navegadores. A tecnologia é fruto da junção entre os padrões
-                HyTime e SGML.</h2>
+            <h2>O HTML (Hypertext Markup Language) é a linguagem essencial para criar páginas da web. Usando tags e elementos, o HTML estrutura o conteúdo online, permitindo a criação de links, imagens, parágrafos e muito mais. Essa linguagem simples e acessível é a base de todos os sites que visitamos.
+
+                Desenvolvedores web dependem do HTML para criar estruturas sólidas de páginas. Além disso, o HTML5, a versão mais recente, introduziu recursos avançados, como áudio e vídeo incorporados, tornando-o ainda mais poderoso. Combinado com CSS para estilos e JavaScript para interatividade, o HTML forma a tríade fundamental do desenvolvimento web.
+                
+                Em resumo, o HTML é a linguagem-chave que possibilita a construção da web moderna, sendo uma habilidade crucial para qualquer pessoa envolvida no desenvolvimento ou na criação de conteúdo na internet.</h2>
 
             <img src="img/css-3.png" alt="icone do css" width="30px">
             <h2>CSS:</h2>
@@ -98,9 +95,7 @@
 
             <img src="img/servidor-sql.png" alt="icone do sql" width="30px">
             <h2>SQL:</h2>
-            <h2>JavaScript é uma linguagem de programação front-end, isto é, uma linguagem que interpretada diretamente
-                no cliente (navegador). Nos últimos anos, JavaScript vem se destacando como a linguagem preferida entre
-                todos os programadores web</h2>
+            <h2>SQL (Structured Query Language) é a linguagem padrão para gerenciamento de bancos de dados relacionais. Utilizada para criar, consultar, atualizar e excluir dados, o SQL é uma ferramenta essencial para administradores e desenvolvedores de bancos de dados. Sua sintaxe poderosa e versatilidade o tornam uma escolha fundamental para lidar eficientemente com informações em aplicativos empresariais. Variantes populares, como MySQL, PostgreSQL e Microsoft SQL Server, atendem a diferentes necessidades, tornando o SQL uma habilidade indispensável para profissionais de tecnologia.</h2>
             <img id="gif" src="img/nRq.gif" alt="gif de uma gatinho sonolento">
         </div>
     </div>
