--- a/index.html
+++ b/index.html
@@ -105,19 +105,25 @@
     </div>
 
     <div id="infos">
+  
+    <div id="linkg">
+        <a href="https://mail.google.com/mail/u/0/#inbox?compose=jrjtXRFMNphjHQCjPBrjcZZJMSRrhwbNBTwbQmnQHrgVHTGgpBNxbLQQkTNrQcPhcVxpzJvV">
 
-        <div id="info_1"><img src="img/gmail.png" width="40px" alt="icone do gmail"> </div>
+                <div id="info_1"><img src="img/gmail.png" width="40px" alt="icone do gmail"> </div>
+                <div id="emailg">
+                    <p>ghost4studio@gmail.com</p>
+                </div>
+        </a>
+    </div> <a id="linkw" href="https://wa.me/qr/T7YX4I6AOM3FF1">
+        <div id="info_2"><img src="img/whatsapp.png" width="40px" alt="icone do whatsapp"> </div></a>
         <div>
-            <p>carlostrenk2018@gmail.com</p>
-        </div>
-
-        <div id="info_2"><img src="img/whatsapp.png" width="40px" alt="icone do whatsapp"> </div>
-        <div>
-            <p>(43) 9 8488-8002</p>
+            <a href="https://wa.me/qr/T7YX4I6AOM3FF1">
+                <p id="nwh">(43) 9 8488-8002</p>
+            </a>
         </div>
     </div>
     </div>
-
+    <img id="qrw" src="img/Imagem_do_WhatsApp_de_2023-10-16_à_s__09.36.38_0ad71338-removebg-preview (1).png" alt="">
     </div>
 
 </body>
